<resources>
    <string name="app_name">Bike Rider - Fix And Park</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_contributions">Your contributions</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_instructions">Instructions</string>
    <string name="nav_privacypolicy">Privacy Policy</string>
    <string name="nav_about">About</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>@string/nav_home</item>
        <item>@string/nav_contributions</item>
        <item>@string/nav_settings</item>
        <item>@string/nav_instructions</item>
        <item>@string/nav_privacypolicy</item>
        <item>@string/nav_about</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tag_line">Park your bike in a safe place...</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <string name="comment">Comments</string>
    <string name="address">Address</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="device_not_supported">This device is not supported to show map in this app.</string>
    <string name="install_play_service">Google play service is needed to show map. Please install it first.</string>
    <string name="map_load_fail">Could not load map. Please try again.</string>
</resources>
